# chat-with-mlx

./: .gitignore  ADD_MODEL.MD  LICENSE  MANIFEST.in  README.md  app.py  chat_test.py  convert.py  pyproject.toml  requirements.txt  state.py  test.py  test_emb.py  test_oai.py
.github/workflows/: install-tests.yml  publish.yml
chat_with_mlx/: __init__.py  app.py
chat_with_mlx/models/: utils.py
chat_with_mlx/models/configs/: Codestral-22B-v0.1-4bit.yaml  Hermes-2-Pro-Llama-3-8B-4bit.yaml  Meta-Llama-3-8B-Instruct-4bit.yaml  MiniCPM-2B-sft-bf16-llama-format-mlx.yaml  Mistral-7B-Instruct-v0.3-4bit.yaml  Mistral-7B-Instruct-v0_2.yaml  Mixtral-8x7B-Instruct-v0.1-4bit.yaml  Mixtral-8x7B-Instruct-v0.1.yaml  Nous-Hermes-2-Mistral-7B-DPO.yaml  Nous-Hermes-2-Mixtral-8x7B-DPO-4bit.yaml  OpenHermes-2.5-Mistral-7B.yaml  Phi-3-medium-4k-instruct-4bit.yaml  Phi-3-mini-128k-instruct-8bit.yaml  Phi-3-small-8k-instruct-4bit.yaml  Qwen2-1.5B-Instruct-4bit.yaml  Qwen2-7B-Instruct-4bit.yaml  Yi-1.5-9B-Chat-4bit.yaml  dolphin-2.9-llama3-70b-4bit.yaml  dolphin-2.9-llama3-8b-8bit.yaml  dolphin-2.9.1-yi-1.5-34b-4bit.yaml  dolphin-2_6-phi-2.yaml  gemma-2b-it.yaml  gemma-7b-it.yaml  quyen-0_5B.yaml  quyen_4B.yaml  qwen1.5-0_5B-Chat.yaml  stablelm-2-zephyr-1_6b.yaml  vbd-llama2-7b-50b-chat.yaml  vinallama-7b-chat.yaml  vistral-7B-Chat-mlx-4bit.yaml
chat_with_mlx/rag/: rag_prompt.py  utils.py
